fix for underlines in post overlapping other text when zoomed-out

--- a/static/style.css
+++ b/static/style.css
@@ -157,6 +157,10 @@ hr {
     text-align: left;
 }
 
+.thread, .post_body p {
+    line-height: 120%;
+}
+
 blockquote {
     border-left: 1px solid white;
     padding: 10px;
